--- a/helm-charts/doris-operator/Chart.yaml
+++ b/helm-charts/doris-operator/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: operator
+name: doris-operator
 description: A Helm chart for Apache Doris Kubernetes Operator
 
 # A chart can be either an 'application' or a 'library' chart.
