--- a/helm-charts/doris/values.yaml
+++ b/helm-charts/doris/values.yaml
@@ -1,65 +1,56 @@
-
-
 nameOverride: "doris"
-
 
 # deploy a doris cluster
 dorisCluster:
   # the name of doriscluster cluster, if not set, the chart name will be used.
   name: "doris"
-  # the namespace of doriscluster cluster, if not set, the release namespace will be used.
-  namespace: "doris"
+
   # annotations for doris cluster.
-  annotations:
-    selectdb/doriscluster: doriscluster-sample
+  annotations: {}
+    #  selectdb/doriscluster: doriscluster-sample
+
   # specify the cn deploy or not.
-  enabledCn: true
+  enabledCn: false
+
   # specify the broker deploy or not.
-  enabledBroker: true
+  enabledBroker: false
 
   # specify the doris adminuser or not.
-  adminUser: {}
-  # name: root
-  # password: "12345"
+  adminUser:
+    name: root
+    password: "Dream001$"
 
 dorisImage:
   feImage:
-    repository: selectdb/doris.fe-ubuntu
+    repository: 172.22.96.158/system_containers/doris-fe
     tag: 2.0.2
-#    imagePullSecrets:
-#      - name: imagePullSecret
   beImage:
-    repository: selectdb/doris.be-ubuntu
+    repository: 172.22.96.158/system_containers/doris-be
     tag: 2.0.2
-#    imagePullSecrets:
-#      - name: imagePullSecret
   cnImage:
     repository: selectdb/doris.be-ubuntu
     tag: 2.0.2
-#    imagePullSecrets:
-#      - name: imagePullSecret
   brokerImage:
     repository: selectdb/doris.broker-ubuntu
     tag: 2.0.2
-#    imagePullSecrets:
-#      - name: imagePullSecret
+
 feSpec:
   replicas: 3
   # electionNumber represents `FOLLOWER` number, replicas - electionNumber as `OBSERVER`
-  electionNumber: 3
-  service: {}
+  #electionNumber: 3
+  service:
     # the fe service type, only supported ClusterIP, NodePort, LoadBalancer
-#    type: "LoadBalancer"
+    type: "NodePort"
     # the loadBalancerIP for static ip config when the type=LoadBalancer and loadbalancerIp is not empty.
 #    loadbalancerIP: "127.0.0.1"
     # config the service port for fe service.
     # if you want to use a dedicated port for fe service, you can config the port.
     # see https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports for more details.
-#    servicePorts:
-#      - nodePort: 9030
-#        targetPort: 9030
-#      - nodePort: 8030
-#        targetPort: 8030
+    servicePorts:
+      - nodePort: 9030
+        targetPort: 9030
+      - nodePort: 8030
+        targetPort: 8030
   configMapInfo: {}
 #    # configMapName specify the configmap will be used by fe, configmap must deployed in same namespace with fe.
 #    configMapName: "fe-configmap"
@@ -67,11 +58,11 @@ feSpec:
 #    resolveKey: "fe.conf"
   resource:
     requests:
+      cpu: 100m
+      memory: 1Gi
+    limits:
       cpu: 8
       memory: 16Gi
-    limits:
-      cpu: 16
-      memory: 32Gi
   nodeSelector: {}
     # kubernetes.io/arch: amd64
   # kubernetes.io/os: linux
@@ -95,34 +86,34 @@ feSpec:
   # - ip: "127.0.0.1"
   #   hostnames: "hostname1"
   persistentVolumes:
-  # - mountPath: /opt/apache-doris/fe/doris-meta
-  #   name: fe-meta
-  #   persistentVolumeClaimSpec:
-  #     # when use specific storageclass, the storageClassName should reConfig, example as annotation.
-  #     #storageClassName: openebs-jiva-csi-default
-  #     accessModes:
-  #       - ReadWriteOnce
-  #     resources:
-  #       requests:
-  #         storage: 10Gi
+  - mountPath: /opt/apache-doris/fe/doris-meta
+    name: fe-meta
+    persistentVolumeClaimSpec:
+      # when use specific storageclass, the storageClassName should reConfig, example as annotation.
+      storageClassName: openebs-localpv
+      accessModes:
+        - ReadWriteOnce
+      resources:
+        requests:
+          storage: 10Gi
   systemInitializationCommand: []
   # command: [ "/sbin/sysctl", "-w", "vm.max_map_count=2000000" ]
 
 beSpec:
   replicas: 3
-  service: {}
+  service:
 #    # the be service type, only supported ClusterIP, NodePort, LoadBalancer
-#    type: "LoadBalancer"
+    type: "ClusterIP"
 #    # the loadBalancerIP for static ip config when the type=LoadBalancer and loadbalancerIp is not empty.
 #    loadbalancerIP: "127.0.0.1"
 #    # config the service port for be service.
 #    # if you want to use a dedicated port for be service, you can config the port.
 #    # see https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports for more details.
-#    servicePorts:
-#      - nodePort: 9040
-#        targetPort: 9040
-#      - nodePort: 8040
-#        targetPort: 8040
+    servicePorts:
+      - nodePort: 9040
+        targetPort: 9040
+      - nodePort: 8040
+        targetPort: 8040
   configMapInfo: {}
 #    # configMapName specify the configmap will be used by fe, configmap must deployed in same namespace with fe.
 #    configMapName: "be-configmap"
@@ -130,11 +121,11 @@ beSpec:
 #    resolveKey: "be.conf"
   resource:
     requests:
+      cpu: 100m
+      memory: 1Gi
+    limits:
       cpu: 8
       memory: 16Gi
-    limits:
-      cpu: 16
-      memory: 32Gi
   nodeSelector: {}
     # kubernetes.io/arch: amd64
     # kubernetes.io/os: linux
@@ -161,29 +152,28 @@ beSpec:
   # - ip: "127.0.0.1"
   #   hostnames: "hostname1"
   persistentVolumes:
-  # - mountPath: /opt/apache-doris/be/log
-  #   name: be-log
-  #   persistentVolumeClaimSpec:
-  #     # when use specific storageclass, the storageClassName should reConfig, example as annotation.
-  #     #storageClassName: openebs-jiva-csi-default
-  #     accessModes:
-  #     - ReadWriteOnce
-  #     resources:
-  #       requests:
-  #         storage: 10Gi
-  # - mountPath: /opt/apache-doris/be/storage
-  #   name: be-storage
-  #   persistentVolumeClaimSpec:
-  #     # when use specific storageclass, the storageClassName should reConfig, example as annotation.
-  #     #storageClassName: openebs-jiva-csi-default
-  #     accessModes:
-  #     - ReadWriteOnce
-  #     resources:
-  #       requests:
-  #         storage: 1024Gi
+  - mountPath: /opt/apache-doris/be/log
+    name: be-log
+    persistentVolumeClaimSpec:
+      # when use specific storageclass, the storageClassName should reConfig, example as annotation.
+      storageClassName: openebs-localpv
+      accessModes:
+      - ReadWriteOnce
+      resources:
+        requests:
+          storage: 2Gi
+  - mountPath: /opt/apache-doris/be/storage
+    name: be-storage
+    persistentVolumeClaimSpec:
+      # when use specific storageclass, the storageClassName should reConfig, example as annotation.
+      storageClassName: openebs-localpv
+      accessModes:
+      - ReadWriteOnce
+      resources:
+        requests:
+          storage: 10Gi
   systemInitializationCommand: []
   # command: [ "/sbin/sysctl", "-w", "vm.max_map_count=2000000" ]
-
 
 cnSpec:
   replicas: 3
@@ -274,7 +264,6 @@ cnSpec:
               type: Utilization
               averageUtilization: 30
 
-
 brokerSpec:
   replicas: 3
   configMapInfo: {}
@@ -337,16 +326,3 @@ brokerSpec:
   #         storage: 1024Gi
   systemInitializationCommand: []
   # command: [ "/sbin/sysctl", "-w", "vm.max_map_count=2000000" ]
-
-
-
-
-
-
-
-
-
-
-
-
-
