[PAASC-13142] Doris 集群删除后对应的pvc没有被删除
Signed-off-by: Zhenhai Gao <gaozh1988@live.com>

--- a/olm/manifests/clusterserviceversion.yaml
+++ b/olm/manifests/clusterserviceversion.yaml
@@ -169,10 +169,19 @@ spec:
           - ""
           resources:
           - pods
+          verbs:
+          - get
+          - list
+          - watch
+        - apiGroups:
+          - ""
+          resources:
           - persistentvolumeclaims
           verbs:
           - get
           - list
+          - delete
+          - deletecollection
           - watch
         - apiGroups:
           - ""
